--- a/test.index.html
+++ b/test.index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>게임 웹사이트</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>save the tint Website</title>
+    <link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
-    <h1>게임 웹사이트</h1>
-    <p>환영합니다! 게임을 즐기세요.</p>
-    <button id="startButton">게임 시작</button>
-    <div id="gameArea"></div>
-    <script src="script.js"></script>
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">
+            <img src="https://vignette.wikia.nocookie.net/logopedia/images/6/66/Blizzard_Entertainment_Logo_2015x.png/revision/latest?cb=20180409151508" alt="Website Logo">
+            </div>
+            <a href="#">Home</a>
+            <a href="#">Games</a>
+            <a href="#">News</a>
+            <a href="#">Community</a>
+            <div class="account">
+                <img src="https://www.pngjoy.com/pngm/295/24977139_individual-account-sunrise-movement-logo.png" alt="계정 로고">
+                <div class="account-menu">
+                    <a href="#">로그인</a>
+                    <a href="#">계정 관리</a>
+                    <a href="#">무료 회원가입</a>
+                    <a href="#">고객지원</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="main-content">
+        <section class="featured-game">
+            <h2>Featured Game</h2>
+            <img src="game-image.jpg" alt="Featured Game Image">
+            <p>Description of the featured game goes here.</p>
+            <a href="#" class="btn">Play Now</a>
+        </section>
+
+        <section class="latest-news">
+            <h2>Latest News</h2>
+            <article>
+                <h3>News Title 1</h3>
+                <p>Summary of the news article 1...</p>
+                <a href="#">Read More</a>
+            </article>
+            <article>
+                <h3>News Title 2</h3>
+                <p>Summary of the news article 2...</p>
+                <a href="#">Read More</a>
+            </article>
+        </section>
+    </main>
+    <footer class="footer">
+        <p>&copy; 2023 save the tint Website. All rights reserved.</p>
+    </footer>
+    <script src="test.js"></script>
 </body>
 </html>
