--- a/test.index.html
+++ b/test.index.html
@@ -9,8 +9,8 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <div class="logo">
-            <img src="https://vignette.wikia.nocookie.net/logopedia/images/6/66/Blizzard_Entertainment_Logo_2015x.png/revision/latest?cb=20180409151508" alt="Website Logo">
+            <div class="logo">Save the Tint
+            <!--img src="https://vignette.wikia.nocookie.net/logopedia/images/6/66/Blizzard_Entertainment_Logo_2015x.png/revision/latest?cb=20180409151508" alt="Website Logo"-->
             </div>
             <a href="#">Home</a>
             <a href="#">Games</a>
@@ -19,7 +19,7 @@
             <div class="account">
                 <img src="https://www.pngjoy.com/pngm/295/24977139_individual-account-sunrise-movement-logo.png" alt="계정 로고">
                 <div class="account-menu">
-                    <a href="#">로그인</a>
+                    <a href="signin.html">로그인</a>
                     <a href="#">계정 관리</a>
                     <a href="signup.html">무료 회원가입</a>
                     <a href="#">고객지원</a>
